--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.8.0",
     "spinners-react": "^1.0.7"
   },
   "devDependencies": {
