--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.4",
     "socket.io-client": "^4.8.0",
     "spinners-react": "^1.0.7"
