--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_FRONTEND_URL=https://application-tracker-frontend.vercel.app
-REACT_APP_BACKEND_URL=https://application-backend-5vqe.onrender.com
+VITE_FRONTEND_URL=https://application-tracker-frontend.vercel.app
+VITE_BACKEND_URL=http://localhost:3000
+# REACT_APP_BACKEND_URL=https://application-backend-5vqe.onrender.com
