added new feature

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_FRONTEND_URL=https://application-tracker-frontend.vercel.app
+# VITE_BACKEND_URL=http://localhost:3000
 VITE_BACKEND_URL=https://application-backend-5vqe.onrender.com
 # REACT_APP_BACKEND_URL=https://application-backend-5vqe.onrender.com
